# primesieve-haskell

./: .gitignore  LICENSE  README.md  stack.yaml
.github/workflows/: ci.yml
algo/: algo.cabal
algo/src/Algo/Data/: Heap.hs
algo/src/Algo/Data/Heap/: Maxiphobic.hs
algo/src/Algo/Internal/: TypeLevel.hs
algo/test/: DataTest.hs
algo/test/Algo/Data/Heap/: MaxiphobicTest.hs
cbits/: primesieve_iterator_size.c
example/: Count.hs  Main.hs
math-foreign/: .ghci  README.md  math-foreign.cabal
math-foreign/cbits/: linear.c  pcg_basic.c  pcg_random.c
math-foreign/cbits/include/: linear.h  pcg_random.h
math-foreign/examples/: Main.hs
math-foreign/src/Math/: Complex.hs
math-foreign/src/Math/Linear/: ElemWise.hs  Internal.hsc  Linalg.hs  Matrix.hs  Vector.hs
math-foreign/src/Math/Linear/Linalg/: Dependent.hs  Naive.hs
math-foreign/src/Math/Linear/Matrix/: Dependent.hs  Mutable.hs  Naive.hs
math-foreign/src/Math/Linear/Matrix/Mutable/: Dependent.hs  Naive.hs
math-foreign/src/Math/Linear/Vector/: Dependent.hs
math-foreign/src/Math/Numeric/: Random.hs  Special.hs
primesieve/: primesieve.cabal
primesieve/example/: Count.hs  Main.hs
primesieve/src/Math/Prime/: FastSieve.hs
primesieve/src/Math/Prime/FastSieve/: FFI.hs
src/Math/Prime/: FastSieve.hs
src/Math/Prime/FastSieve/: FFI.hs
