name:                algo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sighingnow/algo#readme
author:              Tao He
maintainer:          sighingnow@gmail.com
copyright:           Copyright: (c) 2017 Tao He
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Algo.Data.Heap
    Algo.Data.Heap.Maxiphobic
  other-modules:
    Algo.Internal.TypeLevel
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , intuition-plugin

test-suite test-data
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DataTest.hs
  other-modules:
    Algo.Data.Heap.MaxiphobicTest
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , algo
                     , foundation
