name:                math-foreign
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sighingnow/math-foreign#readme
author:              Tao He
maintainer:          sighingnow@gmail.com
copyright:           Copyright: (c) 2017 Tao He
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable math-foreign
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
