name:                primesieve
version:             0.2.0
synopsis:            FFI bindings for the primesieve library.
description:         FFI bindings for the primesieve library.
homepage:            https://github.com/sighingnow/computations/tree/master/primesieve#readme
author:              HE, Tao
maintainer:          sighingnow@gmail.com
copyright:           Copyright: (c) 2017 HE, Tao
category:            Algorithms, Foreign, Math, Number Theory
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
extra-source-files:  README.md

tested-with:
    GHC == 9.6.5
  , GHC == 9.8.2
  , GHC == 9.10.1

library
  hs-source-dirs:      src
  c-sources:
    cbits/primesieve_iterator_size.c
  exposed-modules:
    Math.Prime.FastSieve
  other-modules:
    Math.Prime.FastSieve.FFI
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , vector
  extra-libraries:     primesieve

executable prime-count
  hs-source-dirs:      example
  main-is:             Count.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , primesieve

executable prime-example
  hs-source-dirs:      example
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , primesieve
                     , vector
